--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* /* You can add global styles to this file, and also import other style files * */
+background-image : url("https://www.connectinternetsolutions.com/wp-content/uploads/2016/08/gitlab-e1471529374669-571x500.png");
+backgorund-size : cover;
+background-repeat : no repeat;
