--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -9,6 +9,9 @@
             <input type="text" required class="form-control" id="name">
   
         </div>
+        <div class="col-md-6">
+            <app-github-form></app-github-form>
+          </div>
         <!-- <div class="form-group">
   
             <label for="description">Description</label>
@@ -21,3 +24,4 @@
   
         </div> -->
     </form>
+    </div>
