--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -9,6 +9,7 @@
             <input type="text" required class="form-control" id="name">
   
         </div>
+        <button type="submit" class="btn btn-success">submit</button>
         <div class="col-md-6">
             <app-github-form></app-github-form>
           </div>
