--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,4 +74,4 @@ body {
 </div>
 
 </body>
-</html>
+</html> -->
