--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,6 @@
-<p>user works!</p>
+<div class ="row">
+  <p>{{user.login}}</p>
+  <p>{{user.name}}</p>
+  <p>{{user.avatar_url}}</p>
+  <p>{{user.repositories}}</p>
+</div>
