--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div class ="row">
-  <p>{{user.login}}</p>
-  <p>{{user.name}}</p>
-  <p>{{user.avatar_url}}</p>
-  <p>{{user.repositories}}</p>
+  <p>Username{{user.login}}</p>
+  <p>Names{{user.name}}</p>
+  <p>profile{{user.avatar_url}}</p>
+  <p>Repositories{{user.repositories}}</p>
 </div>
