--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,12 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul> -->
-
+<div>
  <app-search-form></app-search-form>
+</div>
+
+<div>
+ <app-user></app-user>
+</div>
 <router-outlet></router-outlet>
 <!-- <app-githubl></app-github> -->
