--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -1,6 +1,7 @@
 <!-- <p>search-form works!</p> -->
-<div class="topnav">
-    <div class="search-container">
+
+<div class="row">
+    <div class="col-md-6">
       <form action="/action_page.php">
         <input type="text" placeholder="Enter GitHub name.." name="search">
         <button type="submit">Submit</button>
